Style to make sure no elements overlap.

--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -7,3 +7,7 @@ html {
     color: black;
     font-family: $title-font;  
 }
+
+body {
+    margin: 0;
+}
